initial commit of project

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,97 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --app-bg: #0B1220;
+  --surface: #1E293B;
+  --surface-2: #020617;
+
+  --text: #E5E7EB;
+  --muted: #9CA3AF;
+  --border: #334155;
+
+  --primary: #3B82F6;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Inter, Roboto, "Helvetica Neue", Arial, sans-serif;
+  background: var(--app-bg);
+  color: var(--text);
+}
+
+.mat-mdc-card {
+  background: var(--surface) !important;
+  color: var(--text) !important;
+  border: 1px solid var(--border);
+  border-radius: 14px;
+}
+
+.mat-mdc-menu-panel,
+.mat-mdc-select-panel,
+.mat-mdc-dialog-container {
+  background: var(--surface) !important;
+  color: var(--text) !important;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.page-title {
+  font-size: 22px;
+  font-weight: 600;
+  margin: 0 0 14px 0;
+  color: var(--text);
+}
+
+h1, h2, h3, h4, h5 {
+  color: var(--text);
+}
+
+.shell-sidenav {
+  --mdc-list-list-item-label-text-color: #E5E7EB;
+  --mdc-list-list-item-label-text-opacity: 1;
+
+  --mdc-list-list-item-leading-icon-color: #E5E7EB;
+  --mdc-list-list-item-leading-icon-opacity: 1;
+
+  --mdc-list-list-item-hover-label-text-color: #FFFFFF;
+  --mdc-list-list-item-hover-leading-icon-color: #FFFFFF;
+
+  --mdc-list-list-item-focus-label-text-color: #FFFFFF;
+  --mdc-list-list-item-focus-leading-icon-color: #FFFFFF;
+}
+
+.shell-sidenav .mdc-list-item__primary-text {
+  color: #E5E7EB !important;
+  opacity: 1 !important;
+}
+
+.mat-mdc-menu-panel .mat-mdc-menu-item,
+.mat-mdc-menu-panel .mat-mdc-menu-item .mdc-list-item__primary-text,
+.mat-mdc-menu-panel .mat-mdc-menu-item .mat-icon {
+  color: var(--text) !important;
+  opacity: 1 !important;
+}
+
+.mat-mdc-menu-panel .mat-mdc-menu-item .mdc-list-item__primary-text {
+  opacity: 1 !important;
+}
+
+:root, body, button, input, textarea, select {
+  font-family: Inter, Roboto, "Helvetica Neue", Arial, sans-serif !important;
+}
+
+.mdc-typography,
+.mat-typography,
+.mat-mdc-button,
+.mat-mdc-menu-item,
+.mat-mdc-card,
+.mat-mdc-form-field,
+.mat-mdc-list-item {
+  font-family: Inter, Roboto, "Helvetica Neue", Arial, sans-serif !important;
+}
+
