--- a/src/app/layout/shell/shell.html
+++ b/src/app/layout/shell/shell.html
@@ -10,27 +10,27 @@
     </div>
 
     <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard" routerLinkActive="active-link">
+      <a mat-list-item routerLink="/dashboard" (click)="drawer.close()">
         <mat-icon>dashboard</mat-icon>
         <span>Dashboard</span>
       </a>
 
-      <a mat-list-item routerLink="/transactions" routerLinkActive="active-link">
+      <a mat-list-item routerLink="/transactions" (click)="drawer.close()">
         <mat-icon>receipt_long</mat-icon>
         <span>Transactions</span>
       </a>
 
-      <a mat-list-item routerLink="/categories" routerLinkActive="active-link">
+      <a mat-list-item routerLink="/categories" (click)="drawer.close()">
         <mat-icon>category</mat-icon>
         <span>Categories</span>
       </a>
 
-      <a mat-list-item routerLink="/recurring-bills" routerLinkActive="active-link">
+      <a mat-list-item routerLink="/recurring-bills" (click)="drawer.close()">
         <mat-icon>autorenew</mat-icon>
         <span>Recurring Bills</span>
       </a>
 
-      <a mat-list-item routerLink="/reports" routerLinkActive="active-link">
+      <a mat-list-item routerLink="/reports" (click)="drawer.close()")>
         <mat-icon>bar_chart</mat-icon>
         <span>Reports</span>
       </a>
@@ -46,20 +46,27 @@
       <span class="toolbar-title">Money Tracker</span>
       <span class="spacer"></span>
 
-      <button class="avatar-btn" [matMenuTriggerFor]="userMenu" aria-label="User menu">
-        <ng-container *ngIf="user$ | async as user">
-        <img *ngIf="user.photoURL; else initials" class="avatar-img" [src]="user.photoURL" alt="User avatar" />
-        <ng-template #initials>
-        <div class="avatar-fallback">
-          {{ (user.displayName || user.email || '?').charAt(0).toUpperCase() }}
-        </div>
-        </ng-template>
-        </ng-container>
+        <button mat-icon-button [matMenuTriggerFor]="userMenu" aria-label="User menu">
+          <ng-container *ngIf="(auth.user$ | async) as user; else guest">
+            <ng-container *ngIf="user.photoURL; else fallbackIcon">
+              <img
+                class="avatar"
+                [src]="user.photoURL"
+                [alt]="user.displayName ?? user.email ?? 'User'"
+                (error)="onAvatarError($event)"
+                referrerpolicy="no-referrer"
+              />
+            </ng-container>
 
-      <ng-container *ngIf="!(user$ | async)">
-        <mat-icon>account_circle</mat-icon>
-      </ng-container>
-      </button>
+            <ng-template #fallbackIcon>
+              <mat-icon>account_circle</mat-icon>
+            </ng-template>
+          </ng-container>
+
+          <ng-template #guest>
+            <mat-icon>account_circle</mat-icon>
+          </ng-template>
+        </button>
 
       <mat-menu #userMenu="matMenu">
         <ng-container *ngIf="user$ | async as user; else loggedOut">
