Added dashboard, filters to transactions and code clean up on css

--- a/src/app/pages/categories/categories.page.html
+++ b/src/app/pages/categories/categories.page.html
@@ -23,12 +23,12 @@
       <div class="form-grid">
         <mat-form-field appearance="outline" class="span-2">
           <mat-label>Name</mat-label>
-          <input matInput [(ngModel)]="form.name" name="name" placeholder="Groceries" />
+          <input matInput [(ngModel)]="form.name" name="name" />
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="span-2">
           <mat-label>Alias (optional)</mat-label>
-          <input matInput [(ngModel)]="form.alias" name="alias" placeholder="food" />
+          <input matInput [(ngModel)]="form.alias" name="alias" />
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="span-2">
