--- a/src/app/pages/recurring-bills/recurring-bills.page.html
+++ b/src/app/pages/recurring-bills/recurring-bills.page.html
@@ -27,12 +27,12 @@
       <div class="form-grid">
         <mat-form-field appearance="outline" class="span-2">
           <mat-label>Bill name</mat-label>
-          <input matInput [(ngModel)]="form.name" name="name" placeholder="Netflix" />
+          <input matInput [(ngModel)]="form.name" name="name" />
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="span-2">
           <mat-label>Amount</mat-label>
-          <input matInput type="number" step="0.01" [(ngModel)]="form.amount" name="amount" placeholder="0.00" />
+          <input matInput type="number" step="0.01" [(ngModel)]="form.amount" name="amount" />
         </mat-form-field>
 
         <mat-form-field appearance="outline" class="span-2">
