--- a/src/app/pages/transactions/transactions.page.html
+++ b/src/app/pages/transactions/transactions.page.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <!-- FILTER BAR (above pills) -->
+  <!-- Filter bar -->
   <div class="surface" style="margin-bottom: 12px;">
     <div class="row-between">
       <h3 class="section-title" style="margin: 0;">Filters</h3>
@@ -14,7 +14,6 @@
     </div>
 
     <div class="form-grid">
-      <!-- Start date -->
       <mat-form-field appearance="outline">
         <mat-label>Start date</mat-label>
         <input
@@ -26,7 +25,6 @@
         />
       </mat-form-field>
 
-      <!-- End date -->
       <mat-form-field appearance="outline">
         <mat-label>End date</mat-label>
         <input
@@ -38,7 +36,6 @@
         />
       </mat-form-field>
 
-      <!-- Category -->
       <mat-form-field appearance="outline">
         <mat-label>Category</mat-label>
         <mat-select
@@ -53,7 +50,6 @@
         </mat-select>
       </mat-form-field>
 
-      <!-- Search -->
       <mat-form-field appearance="outline">
         <mat-label>Search by name</mat-label>
         <input
@@ -66,7 +62,7 @@
     </div>
   </div>
 
-  <!-- Pills (filtered) -->
+  <!-- Pills -->
   <div class="pills">
     <div class="pill">
       <span>Count</span>
